# samy

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  test.yml
backend/: main.py
backend/api/: explain.py  health.py  optimize.py  review.py  routes.py  skills.py
backend/core/: config.py  constants.py  logger.py
backend/database/: models.py  repositories.py  sqlite.db
backend/llm/: embeddings.py  ollama_client.py  prompts.py
backend/rag/: chunker.py  ingest.py  retriever.py  vector_store.py
backend/schemas/: api.py
backend/services/: explain_service.py  optimize_service.py  review_service.py  telemetry_service.py
backend/skills/: registry.py
backend/skills/analytics/: base.py  dashboard.py  kpi.py  metrics.py
backend/skills/dba/: backup_restore.py  base.py  clustering.py  migration.py  partitioning.py  postgres.py  replication.py  vacuum.py
backend/skills/gcp/: base.py  cloudrun.py  cloudsql.py  composer.py  cost_analysis.py  dataflow.py  datastream.py  iam.py  monitoring.py  observability.py  pubsub.py  security.py
backend/skills/go/: concurrency.py  review.py  tests.py
backend/skills/golang/: concurrency.py  review.py  tests.py
backend/skills/python/: code.py  docstring.py  fastapi.py  refactor.py  review.py  tests.py
docs/: architecture.md  deployment.md  roadmap.md
knowledge/python/: architecture.md  best_practices.md  testing.md
scripts/: backup_db.py  build_embeddings.py  import_playbooks.py  sync_knowledge.py
(+43 files in other folders)
