[project]
name = "samy"
version = "0.0.1"
description = "AI assistant built for Data, Cloud and Analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
]
