[project]
name = "samy"
version = "0.4.0"
description = "AI assistant built for Data, Cloud and Analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
